feat: basics